// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scopeId compiler support > should wrap default slot 1`] = `
"import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const _component_Child = _resolveComponent("Child")
  const n1 = _createComponentWithFallback(_component_Child, null, {
    "default": () => {
      const n0 = t0()
      return n0
    }
  }, true)
  return n1
}"
`;

exports[`scopeId compiler support > should wrap dynamic slots 1`] = `
"import { resolveComponent as _resolveComponent, createForSlots as _createForSlots, createComponentWithFallback as _createComponentWithFallback, template as _template } from 'vue';
const t0 = _template("<div test></div>")

export function render(_ctx) {
  const _component_Child = _resolveComponent("Child")
  const n4 = _createComponentWithFallback(_component_Child, null, {
    $: [
      () => (_ctx.ok
        ? {
          name: "foo",
          fn: () => {
            const n0 = t0()
            return n0
          }
        }
        : void 0),
      () => (_createForSlots(_ctx.list, (i) => ({
        name: i,
        fn: () => {
          const n2 = t0()
          return n2
        }
      })))
    ]
  }, true)
  return n4
}"
`;

exports[`scopeId compiler support > should wrap named slots 1`] = `
"import { resolveComponent as _resolveComponent, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createComponentWithFallback as _createComponentWithFallback, template as _template } from 'vue';
const t0 = _template(" ")
const t1 = _template("<div test></div>")

export function render(_ctx) {
  const _component_Child = _resolveComponent("Child")
  const n4 = _createComponentWithFallback(_component_Child, null, {
    "foo": (_slotProps0) => {
      const n0 = t0()
      _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.msg)))
      return n0
    },
    "bar": () => {
      const n2 = t1()
      return n2
    }
  }, true)
  return n4
}"
`;
